<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <EditTextPreference
      android:key="log_interval"
      android:title="@string/pref_log_interval"
      android:inputType="number"
      android:summary="@string/pref_log_interval_summary"
      android:defaultValue="@string/pref_log_interval_default" />

  <CheckBoxPreference
      android:key="enable_spokesperson"
      android:title="@string/pref_enable_spokesperson"
      android:summary="@string/pref_enable_spokesperson_summary"
      android:defaultValue="@string/pref_enable_spokesperson_default" />

  <CheckBoxPreference
      android:key="send_sms"
      android:dependency="enable_spokesperson"
      android:title="@string/pref_send_sms"
      android:summary="@string/pref_send_sms_summary"
      android:defaultValue="@string/pref_send_sms_default" />

  <EditTextPreference
      android:key="sms_interval"
      android:dependency="send_sms"
      android:inputType="number"
      android:title="@string/pref_sms_interval"
      android:summary="@string/pref_sms_interval_summary"
      android:defaultValue="@string/pref_sms_interval_default" />

  <EditTextPreference
      android:key="sms_recipient"
      android:dependency="send_sms"
      android:inputType="phone"
      android:title="@string/pref_sms_recipient"
      android:summary="@string/pref_sms_recipient_summary"
      android:defaultValue="@string/pref_sms_recipient_default" />

  <EditTextPreference
      android:key="sound_length"
      android:dependency="enable_spokesperson"
      android:inputType="number"
      android:title="@string/pref_sound_length"
      android:summary="@string/pref_sound_length_summary"
      android:defaultValue="@string/pref_sound_length_default" />

  <CheckBoxPreference
      android:key="take_photos"
      android:title="@string/pref_take_photos"
      android:summary="@string/pref_take_photos_summary"
      android:defaultValue="@string/pref_take_photos_default" />

  <EditTextPreference
      android:key="photo_interval"
      android:dependency="take_photos"
      android:inputType="number"
      android:title="@string/pref_photo_interval"
      android:summary="@string/pref_photo_interval_summary"
      android:defaultValue="@string/pref_photo_interval_default" />

  <ListPreference
      android:key="scene_mode"
      android:dependency="take_photos"
      android:title="@string/pref_scene_mode"
      android:summary="@string/pref_scene_mode_summary"
      android:defaultValue="@string/pref_scene_mode_default"
      android:entries="@array/scene_mode_entries"
      android:entryValues="@array/scene_mode_values" />

  <CheckBoxPreference
      android:key="capture_video"
      android:title="@string/pref_capture_video"
      android:summary="@string/pref_capture_video_summary"
      android:defaultValue="@string/pref_capture_video_default" />

  <EditTextPreference
      android:key="video_interval"
      android:dependency="capture_video"
      android:inputType="number"
      android:title="@string/pref_video_interval"
      android:summary="@string/pref_video_interval_summary"
      android:defaultValue="@string/pref_video_interval_default" />

  <EditTextPreference
      android:key="video_length"
      android:dependency="capture_video"
      android:inputType="number"
      android:title="@string/pref_video_length"
      android:summary="@string/pref_video_length_summary"
      android:defaultValue="@string/pref_video_length_default" />

</PreferenceScreen>
