<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <TextView
    android:text="@string/location_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/location_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:text="@string/battery_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/battery_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:text="@string/signal_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/signal_text"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/error_text"
    android:textColor="#f00"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <FrameLayout
    android:id="@+id/camera_preview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

</LinearLayout>
